# web_gpu_server

./: .clang-format  .clang-tidy  .env.example  .prettierignore  .prettierrc  CMakeLists.txt  README.md  binding.gyp  eslint.config.mjs  package.json  tsconfig.json
src/: index.ts  server.ts  zod-extensions.ts
src/ai/: AiManager.ts  NOTATKI_AI_DO_MAGISTERKI.md  ai.controller.ts  ai.route.ts  aicontroller.ts
src/cuda/: NOTATKI_CUDA_DO_MAGISTERKI.md  addon.cpp  cudaBackend.ts  cuda_worker.h  matrix_kernels.cu  matrix_kernels.h  smoke.ts
src/gpu/: NOTATKI_WEBGPU_DO_MAGISTERKI.md  cnn-runner.ts  device.ts  gaussianBlur.ts  matrixMul.ts  mlp-runner.ts  render-runner.ts  video-runner.ts
src/gpu/shaders/: cnn.wgsl  gaussianBlur.wgsl  histogram.wgsl  matrixMul.wgsl  matrixMulTiled.wgsl  mlp.wgsl  randomFill.wgsl  renderSceneCompute.wgsl  renderSceneRender.wgsl  stressTouch.wgsl  videoBilinear.wgsl
src/render/: README.md  scene.ts
src/routes/: ai.ts  benchmark.ts  gpu-info.ts  gpu-stress.ts  health.ts  image.ts  matrix.ts  render.ts  video.ts
src/video/: VideoManager.ts
